--- a/content/release-notes/2023-12-04-console.md
+++ b/content/release-notes/2023-12-04-console.md
@@ -4,4 +4,4 @@ description: Announcing Neon's Polyscale integration
 
 ## Deploy a global cache with Neon's PolyScale integration
 
-We're excited to announce the launch of Neon's PolyScale integration. This new feature lets you set up a global cache for your Neon database with just a few clicks. PolyScale's low-latency edge network enables quick access your data from anywhere in the world. Enjoy benefits like reduced load on your database and improved slow query performance. A PolyScale global cache is also an alternative to cross-regional replication, without the added complexity. No coding or infrastructure changes are required. To get started, check out our [PolyScale integration](/docs/guides/polyscale-integration) guide. Like Neon, PolyScale offers a free plan. No credit card is required.
+We're excited to announce the launch of Neon's PolyScale integration. [PolyScale](https://docs.polyscale.ai/) allows you to easily cache your data globally through its low-latency [regional edge network](https://docs.polyscale.ai/edge-network-and-security/#regional-edge-network). Enjoy benefits like speedy accces to your data from anywhere in the world, reduced load on your database, and improved slow query performance. A PolyScale global cache is also an alternative to cross-regional replication without the added complexity. No coding or infrastructure changes are required. To get started, see our [PolyScale integration](/docs/guides/polyscale-integration) guide. Like Neon, PolyScale offers a free plan. No credit card is required.
