--- a/content/release-notes/2023-12-04-console.md
+++ b/content/release-notes/2023-12-04-console.md
@@ -4,6 +4,8 @@ description: Announcing Neon's Polyscale integration
 
 ## Deploy a global cache with Neon's PolyScale integration
 
+![Polyscale integration card](/docs/relnotes/neon_polyscale.jpg)
+
 We are pleased to announce the launch of Neon's PolyScale integration. [PolyScale](https://docs.polyscale.ai/) allows you to easily cache your data globally through its low-latency regional edge network. Enjoy benefits like speedy accces to your data from anywhere in the world, reduced load on your database, and improved slow query performance. A PolyScale global cache is also an alternative to cross-regional replication without the added complexity. No coding or infrastructure changes are required to use PolyScale. You can have it up and running in just a few minutes. Like Neon, PolyScale offers a free plan. No credit card is required.
 
 To get started:
