--- a/content/release-notes/2023-12-05-docs.md
+++ b/content/release-notes/2023-12-05-docs.md
@@ -4,7 +4,7 @@ description: Neon achieves SOC 2 Type 2 compliance
 
 ### SOC 2 Type 2 Compliance
 
-![security image](/docs/relnotes/privacy_policy.png)
+![security image](/docs/relnotes/neon-soc2.jpg)
 
 At Neon, we are committed to safeguarding customer data and maintaining a high level of security. As part of this ongoing commitment, we are pleased to announce that we have successfully achieved SOC 2 Type 2 compliance. To learn more about this important security milestone and what lies ahead for Neon, please see the [SOC 2 Type 2 Compliance](https://neon.tech/blog/soc2-type2) blog post from the Neon security team.
 
