--- a/content/release-notes/2023-04-14-docs.md
+++ b/content/release-notes/2023-04-14-docs.md
@@ -7,11 +7,7 @@
 
 - Added documentation for Neon's `pg_tiktoken` extension. This extension enables fast and efficient tokenization of data in your POstgres database using OpenAI's [tiktoken](https://github.com/openai/tiktoken) library. To learn how to install the extension, utilize its features for tokenization and token management, and integrate the extension with ChatGPT models, see [The pg_tiktoken extension](/docs/extensions/pg_tiktoken).
 - Added documentation for `pg_vector` extension. This extension enables vector similarity search and storing embeddings in Postgres. It is particularly useful for applications involving natural language processing, such as those built on top of OpenAI's GPT models. For information about vector similarity and embeddings, how to enable the `pgvector` extension in Neon, and how to create, store, and query vectors, see [The pgvector extension](/docs/extensions/pgvector).
-- Reorganized our Prisma documentation into two parts to make it easier for you to get started with Prisma and Neon. The first part explains how to connect Prisma to Neon, establish connections when using Prisma Client with serverless functions, and resolve connection timeout issues. The second part describes how to configure Neon with Prisma Migrate for schema migrations.
-
-  - [Connect from Prisma to Neon](/docs/guides/prisma)
-  - [Use Prisma Migrate with Neon](/docs/guides/prisma-migrate)
-
+- Reorganized our Prisma documentation into two parts to make it easier for you to get started with Prisma and Neon.
 - Added documentation describing primary and non-primary branches. Each Neon project has a primary branch called `main`, by default. The advantage of the primary branch is that its compute endpoint remains accessible if you exceed your project's limits, ensuring uninterrupted access to data that resides on the primary branch. Any branch not designated as the primary branch is considered a non-primary branch. To learn more, see:
 
   - [Primary branch](/docs/manage/branches#primary-branch)
