remove admonition. Not necessary.

--- a/content/release-notes/2023-12-07-console.md
+++ b/content/release-notes/2023-12-07-console.md
@@ -10,6 +10,6 @@ When visiting the **Integrations** page, you'll notice different categories:
 - **Coming soon**: These are the integrations that will be available in the near future.
 - **Request an integration**: An option for you to request new integrations.
 
-We've recently added several integrations to our **Coming soon** category. You can express your interest in a particular integration by clicking **Request** and sharing your use case, which helps us prioritize and build for exactly what you need. Please have a look and let us know what integration you would like Neon to build next.
+We've recently added several integrations to our **Coming soon** category. You can express your interest in a particular integration by clicking **Request** and sharing your use case, which helps us prioritize and build for exactly what you need. Have a look and let us know what integration you would like Neon to build next.
 
 ![Integrations coming soon dialog](/docs/relnotes/integrations_coming_soon.png)
