--- a/content/release-notes/2023-12-12-console.md
+++ b/content/release-notes/2023-12-12-console.md
@@ -16,7 +16,7 @@ Using a new `neonctl` command, `set-context`, you can now set a background conte
 
 ### Support for timescaledb 2.13.0 for Postgres 16
 
-The `timescaledb` extension for scheduling stored procedures was updated to a newer version that includes support for Postgres 16.
+The `timescaledb` extension, version 2.13.0, which enables scalable inserts and complex queries for time-series data, is now available on Postgres 16.
 
 | Postgres extension           | Old version   | New version   |
 |------------------------------|---------------|---------------|
