--- a/content/release-notes/2023-12-12-console.md
+++ b/content/release-notes/2023-12-12-console.md
@@ -29,4 +29,4 @@ If you installed this extension previously and want to upgrade to the latest ver
 For a complete list of Postgres extensions supported by Neon, see [Postgres extensions](/docs/extensions/pg-extensions).
 
 ### Fixes & improvements
-* UI: Fixed an unresponsive Read-only (RO) radio button option that sometimes appeared when creating new endpoints.
+* UI: Fixed an unresponsive Read-only (RO) radio button option that appears on the **Create Compute Endpoint** modal.
