--- a/content/release-notes/2023-12-12-console.md
+++ b/content/release-notes/2023-12-12-console.md
@@ -8,7 +8,7 @@ Neon is pleased to announce the latest branching feature to help improve your de
 
 With one click, you can now update your working branch to the latest available schema and data from its parent branch, avoiding labor-intensive and error-prone manual updates or branch restorations. This action is availble from both the Neon Console and the Neon CLI. For details, see [Reset branch from parent](/docs/manage/branches#reset-a-branch-from-parent).
 
-![Reset branch from parent](/docs/relnotes/reset_from_parent.gif)
+![Reset branch from parent](/docs/relnotes/reset_from_parent.mp4)
 
 ### Set context for the Neon CLI
 
@@ -17,14 +17,6 @@ Using a new `neonctl` command, `set-context`, you can now set a background conte
 ### Support for timescaledb 2.13.0 for Postgres 16
 
 The `timescaledb` extension, version 2.13.0, which enables scalable inserts and complex queries for time-series data, is now available on Postgres 16.
-
-| Postgres extension           | Old version   | New version   |
-|------------------------------|---------------|---------------|
-| `timescaledb`                 |2.10.1        | 2.13.0        |
-
-Older versions remain on Postgres 15 or 14.
-
-If you installed this extension previously and want to upgrade to the latest version, please refer to [Update an extension version](/docs/extensions/pg-extensions#update-an-extension-version) for instructions.
 
 For a complete list of Postgres extensions supported by Neon, see [Postgres extensions](/docs/extensions/pg-extensions).
 
