--- a/content/release-notes/2023-12-14-console.md
+++ b/content/release-notes/2023-12-14-console.md
@@ -4,7 +4,7 @@ description: Quickstart improvements and other fixes
 
 ## Quickstart
 
-We've revised the **Quickstart** panel that appears at the top of the Neon project **Dashboard** after creating a new project. Follow the Quickstart to learn about [passwordless authentication](https://neon.tech/docs/connect/passwordless-connect), installing the [Neon CLI](https://neon.tech/docs/reference/neon-cli), integrating your apps with Neon, and importing data. 
+We've revised the **Quickstart** panel that appears at the top of the Neon project **Dashboard** after creating a new project. Follow this Quickstart to learn about [passwordless authentication](https://neon.tech/docs/connect/passwordless-connect), installing the [Neon CLI](https://neon.tech/docs/reference/neon-cli), integrating your apps with Neon, and importing data into your project. 
 
 <video autoPlay playsInline muted loop width="800" height="600">
   <source type="video/mp4" src="/docs/relnotes/quickstart.mp4"/>
