fix: add headings to release notes posts

--- a/content/release-notes/2023-12-07-console.md
+++ b/content/release-notes/2023-12-07-console.md
@@ -2,6 +2,8 @@
 description: What integration you would like Neon to build next?
 ---
 
+### Integrations page in Console
+
 The **Integrations** page in the [Neon Console](https://console.neon.tech/) provides a hub for managing third-party integrations with your Neon project.
 
 When visiting the **Integrations** page, you'll notice different categories:
