--- a/content/release-notes/2023-12-23-console.md
+++ b/content/release-notes/2023-12-23-console.md
@@ -1,8 +1,8 @@
 ---
-description: Introducing IP Allow and Logical Replication
+description: IP allowlisting, logical replication, Postgres version updates, and more 
 ---
 
-### IP Allow 
+### Control access to your data with IP Allow 
 
 ![Neon IP Allow banner image](/docs/relnotes/neon-ip-allow.jpg)
 
@@ -10,7 +10,7 @@ Neon's **IP Allow** feature, now available with the [Neon Pro Plan](/docs/introd
 
 To get started, see [Configure IP Allow](/docs/manage/projects#configure-ip-allow).
 
-### Logical replication
+### Change Data Capture (CDC) with Logical Replication
 
 ![Neon logical replication banner](/docs/relnotes/neon-logical-replication.jpg)
 
@@ -28,13 +28,13 @@ Also, check out these blog posts from Neon and [Materialize](https://materialize
 - [Change Data Capture with Serverless Postgres](https://neon.tech/blog/change-data-capture-with-serverless-postgres)
 - [Change Data Capture with Neon and Materialize](https://neon.tech/blog/cdc-with-materialize)
 
-### Neon Vercel Integration improvements
+### Postgres version update
 
-The following changes were made to the [Neon Vercel Integration](https://vercel.com/integrations/neon): 
-
-- To ensure that users of the integration that access Neon from Vercel's serverless environment do not run out connections, the `DATABASE_URL` and `PGHOST` environment variables added to a Vercel project by the Neon integration are now set to a pooled Neon connection string by default. With a pooled connection string, connection requests are served by Neon's PgBouncer connection pooler, which supports up to 10,000 simultaneous connections. Previously, these variables were set to an unpooled connection string, causing some users to run out of available connections.
-  A new environment variable named `DATABASE_URL_UNPOOLED` was added, which is set to the unpooled Neon connection string.
-  For information about connection pooling in Neon and "pooled" vs "unpooled" connections strings, see [Connection pooling](https://neon.tech/docs/connect/connection-pooling).
-  To learn more about the Neon Vercel Integration, see [Connect with the Neon Vercel Integration](https://neon.tech/docs/guides/vercel).
+Supported Postgres versions were updated to 14.10, 15.5, and  and 16.1, respectively.
 
 ### Fixes & improvements
+
+- Added the `REPLICATION` privilege to the [neon_superuser](/docs/manage/roles#the-neonsuperuser-role) role. The `REPLICATION` privilege was introduced with the release of [logical replication](/docs/guides/logical-replication-guide) support in Neon. Only the default Postgres role created with your Neon project and roles created using the Neon Console, CLI, or API are granted membership in the `neon_superuser` role, which includes the `REPLICATION` privilege. Granting the `REPLICATION` privilege to roles created via SQL is currently not permitted.
+- Added support for browser-issued SQL-over-HTTP batch queries using the [Neon serverless driver](/docs/serverless/serverless-driver). Batch queries were failing because `Neon-Batch-Isolation-Level` and `Neon-Batch-Read-Only` headers were missing from the server's `OPTIONS` response.
+
+
