edits, fix typo

--- a/content/release-notes/2023-12-23-console.md
+++ b/content/release-notes/2023-12-23-console.md
@@ -6,7 +6,7 @@ description: IP allowlisting, logical replication, Postgres version updates, and
 
 ![Neon IP Allow banner image](/docs/relnotes/neon-ip-allow.jpg)
 
-Neon's **IP Allow** feature, now available with the [Neon Pro Plan](/docs/introduction/pro-plan), ensures that only trusted IP addresses can connect to the project where your database resides, preventing unauthorized access and helping maintain overall data security. You can limit access to individual IP addresses, IP ranges, or IP addreses and ranges defined with [CIDR notation](/docs/reference/glossary#cidr-notation). 
+Neon's **IP Allow** feature, now available with the [Neon Pro Plan](/docs/introduction/pro-plan), ensures that only trusted IP addresses can connect to the project where your database resides, preventing unauthorized access and helping maintain overall data security. You can limit access to individual IP addresses, IP ranges, or IP addresses and ranges defined with [CIDR notation](/docs/reference/glossary#cidr-notation). 
 
 To get started, see [Configure IP Allow](/docs/manage/projects#configure-ip-allow).
 
@@ -14,7 +14,7 @@ To get started, see [Configure IP Allow](/docs/manage/projects#configure-ip-allo
 
 ![Neon logical replication banner](/docs/relnotes/neon-logical-replication.jpg)
 
-Neon is pleased to announce support for logical replication, which brings Change Data Capture (CDC) to serverless Postgres. You can now stream data from your Neon databasee to a variety of external destinations, including data warehouses, analytical database services, messaging platforms, event-streaming platforms, and external Postgres databases. Logical replication is available to all Neon users.
+Neon is pleased to announce support for logical replication, which brings Change Data Capture (CDC) to serverless Postgres. You can now stream data from your Neon database to a variety of external destinations, including data warehouses, analytical database services, messaging platforms, event-streaming platforms, and external Postgres databases. Logical replication is available to all Neon users.
 
 To get started, jump into one of our step-by-step logical replication guides:
 
@@ -30,7 +30,7 @@ Also, check out these blog posts from Neon and [Materialize](https://materialize
 
 ### Postgres version update
 
-Supported Postgres versions were updated to 14.10, 15.5, and  and 16.1, respectively.
+Supported Postgres versions were updated to 14.10, 15.5, and 16.1, respectively.
 
 ### Fixes & improvements
 
