Global word updates

--- a/content/changelog/2023-08-09-console.md
+++ b/content/changelog/2023-08-09-console.md
@@ -5,9 +5,9 @@ You can now configure the history retention period for a Neon project. History r
 The **History retention** setting is located in the Neon Console under **Settings** > **Storage**.
 ![History retention configuration](/docs/relnotes/history_retention.png)
 
-### Configurable Auto-suspend
+### Configurable Autosuspend
 
-After an extensive testing period, we are pleased to announce that our _Configurable auto-suspend_ feature has successfully transitioned out of Beta. This feature controls when a Neon compute instance scales to zero due to inactivity. For more information, see [Configuring Auto-suspend for Neon computes](https://neon.tech/docs/guides/auto-suspend-guide).
+After an extensive testing period, we are pleased to announce that our _Configurable autosuspend_ feature has successfully transitioned out of Beta. This feature controls when a Neon compute instance scales to zero due to inactivity. For more information, see [Configuring Autosuspend for Neon computes](https://neon.tech/docs/guides/auto-suspend-guide).
 
 ### Fixes & improvements
 
