--- a/content/changelog/2023-04-11-console.md
+++ b/content/changelog/2023-04-11-console.md
@@ -1,7 +1,7 @@
-### Configurable Auto-suspend
+### Configurable autosuspend
 
-You can now configure the period of inactivity after which a compute is automatically suspended by modifying the **Auto-suspend delay** setting for a compute endpoint. For example, you can increase the **Auto-suspend delay** setting to reduce how often a compute is suspended, or you can disable the _Auto-suspend_ feature entirely to ensure that a compute remains active. The maximum **Auto-suspend delay** setting is 86400 seconds (24-hours). A setting of 0 means use the default (5 minutes / 300 seconds), and a setting of -1 means never suspend the compute. You can access the configuration dialog by [editing a compute endpoint](/docs/manage/endpoints#edit-a-compute-endpoint).
-  ![Auto-suspend delay](/docs/relnotes/auto_suspend_delay.png)
+You can now configure the period of inactivity after which a compute is automatically suspended by modifying the **Suspend compute after a period of inactivity** setting for a compute endpoint. For example, you can increase the setting to reduce how often a compute is suspended, or you can disable the feature entirely to ensure that a compute remains active. The maximum autosuspend setting is 86400 seconds (24-hours). A setting of 0 means use the default (5 minutes / 300 seconds), and a setting of -1 means never suspend the compute. You can access the configuration dialog by [editing a compute endpoint](/docs/manage/endpoints#edit-a-compute-endpoint).
+  ![Autosuspend delay](/docs/relnotes/auto_suspend_delay.png)
 
 ### Monitor storage on the Dashboard
 
