--- a/content/changelog/2023-07-24-console.md
+++ b/content/changelog/2023-07-24-console.md
@@ -1,7 +1,7 @@
-### Auto-suspend delay project defaults
+### Autosuspend delay project defaults
 
-Neon now provides an **Auto-suspend delay** control on the project creation dialog, enabling Neon Pro plan users to define a default **Auto-suspend delay** setting for a project's compute endpoints. The **Auto-suspend delay** setting defines the period of inactivity after which a compute endpoint is automatically suspended. For more information, see [Create a project](/docs/manage/projects#create-a-project).
-![Auto-suspend delay project creation dialog](/docs/relnotes/auto_suspend_delay_create_project.png)
+Neon now provides an **Autosuspend delay** control on the project creation dialog, enabling Neon Pro plan users to define a default autosuspend setting for a project's compute endpoints. The autosuspend setting defines the period of inactivity after which a compute endpoint is automatically suspended. For more information, see [Create a project](/docs/manage/projects#create-a-project).
+![Autosuspend delay project creation dialog](/docs/relnotes/auto_suspend_delay_create_project.png)
 
 ### Fixes & improvements
 
