--- a/content/changelog/2023-10-17-console.md
+++ b/content/changelog/2023-10-17-console.md
@@ -1,12 +1,12 @@
 ### Fixes & improvements
 
-- UI: Added new fields for configuring the auto-suspend delay period for Neon compute instances, allowing you to specify the delay period in seconds, minutes, hours, or days.
+- UI: Added new fields for configuring the autosuspend delay period for Neon compute instances, allowing you to specify the delay period in seconds, minutes, hours, or days.
 
-    ![Auto-suspend delay controls](/docs/relnotes/autosuspend_controls.png)
+    ![Autosuspend delay controls](/docs/relnotes/autosuspend_controls.png)
 
-    Neon's _Auto-suspend_ feature automatically suspends a compute endpoint after a period of inactivity to minimize compute costs. This feature is also known as "scale-to-zero". By default, suspension occurs after 5 minutes of inactivity. [Neon Pro Plan](/docs/introduction/pro-plan) users can configure the auto-suspend setting when creating a project, changing default compute settings, creating a compute endpoint, or editing a compute endpoint.
+    Neon's _Autosuspend_ feature automatically suspends a compute endpoint after a period of inactivity to minimize compute costs. This feature is also known as "scale-to-zero". By default, suspension occurs after 5 minutes of inactivity. [Neon Pro Plan](/docs/introduction/pro-plan) users can configure the autosuspend setting when creating a project, changing default compute settings, creating a compute endpoint, or editing a compute endpoint.
 
-    For more information about this feature, see [Auto-suspend](/docs/introduction/auto-suspend).
+    For more information about this feature, see [Autosuspend](/docs/introduction/auto-suspend).
 
 - UI: When sharing a Neon project with someone who does not have a Neon account, an email invitation is now sent to the specified email address. Previously, an email was only sent to registered Neon users.
 
