--- a/content/changelog/2023-05-19-console.md
+++ b/content/changelog/2023-05-19-console.md
@@ -1,8 +1,8 @@
 ### Autoscaling support for fractional compute sizes
 
-Neon's Autoscaling feature now supports fractional (1/4 and 1/2) minimum compute sizes. Previously, the minimum compute size for Autoscaling was 1.
+Neon's Autoscaling feature now supports fractional (1/4 and 1/2) minimum compute sizes. Previously, the minimum compute size for autoscaling was 1.
   ![Autoscaling fractional compute sizes](/docs/relnotes/fractional_compute_sizes.png)
-  Autoscaling is a [Neon Pro plan](/docs/introduction/pro-plan) feature. For configuration instructions, see [Compute size and Autoscaling configuration](/docs/manage/endpoints#compute-size-and-autoscaling-configuration).
+  Autoscaling is a [Neon Pro plan](/docs/introduction/pro-plan) feature. For configuration instructions, see [Compute size and autoscaling configuration](/docs/manage/endpoints#compute-size-and-autoscaling-configuration).
 
 ### Free Tier "Billing" page
 
