--- a/content/changelog/2024-01-12-console.md
+++ b/content/changelog/2024-01-12-console.md
@@ -7,8 +7,9 @@ description: TBD
 - The [neon_superuser](/docs/manage/roles#the-neonsuperuser-role) role is now able to execute the `pg_stat_statements_reset()` function that is part of the `pg_stat_statements` extension. This function discards statistics gathered so far by `pg_stat_statements`. Roles created in the Neon console, CLI, or API, including the default role created with each Neon project, are granted membership in the `neon_superuser` role.
 - Fixed the **Cancel** action in card drawers on the **Integrations** page in the Neon Console. When clicking **Cancel**, card drawers did not close.
 - Added a **Vercel integration** card to the **Integrations** page in the Neon Console.
+- For logical replication, the PostgreSQL `max_slot_wal_keep_size` is now set to 1 GB, limiting the maximum size of WAL files that replication slots are allowed to retain in the `pg_wal` directory. This is a temporary limit that will be removed in a future release. The limit avoids an accumulation of WAL data at the publisher due to a lagging subscriber, which could cause a slow compute start.
 
 ### Docs
 
-- Add a new logical repliocation guide for replicating data from Neon with Fivetran. See [Replicate data with Fivetran](https://neon.tech/docs/guides/logical-replication-fivetran).
+- Added a new logical replication guide for replicating data from Neon with Fivetran. See [Replicate data with Fivetran](https://neon.tech/docs/guides/logical-replication-fivetran).
 
