--- a/content/changelog/2024-01-12-console.md
+++ b/content/changelog/2024-01-12-console.md
@@ -1,18 +1,33 @@
 ---
-description: New docs, replicating data with Airbyte, fixes & improvements
+description: New docs, replicating data with Airbyte, building a custom ChatGPT, fixes & improvements
 ---
+
+### From the Neon Blog
+
+In case you missed them, be sure to check out our latest posts.
+
+#### Logical Replication and CDC in PostgreSQL with Airbyte
+
+![CDC in PostgreSQL with Airbyte](/docs/relnotes/neon_logical_replication_1.jpg)
+
+Learn how to synchronize your PostgreSQL and Airbyte data in this community-contributed blog post by Jacob Prall, Senior Developer Advocate at @AirbyteHQ: 
+    
+[A Guide to Logical Replication and CDC in PostgreSQL with Airbyte](https://neon.tech/blog/a-guide-to-logical-replication-and-cdc-in-postgresql-with-airbyte)
+
+#### Publish a custom ChatGPT
+
+![CDC in PostgreSQL with Airbyte](/docs/relnotes/neon_expert_gpt_1.jpg)
+
+Learn how to create and publish a custom ChatGPT with this post from Peter Bendel, Postgres Performance Engineer @neondatabase, and Raouf Chebri
+Developer Advocate @neondatabase:
+    
+[OpenAI’s GPT Store is live: Create and Publish a custom Postgres GPT Expert](https://neon.tech/blog/openais-gpt-store-is-live-create-and-publish-a-custom-postgres-gpt-expert)
 
 ### What's new in docs?
 
 - Check out our new guide that describes how to [replicate data from Neon with Fivetran](https://neon.tech/docs/guides/logical-replication-fivetran).
 - Want to better understand how Neon's project billing works? We've added a real-world example of a generative AI project with 80,000 daily active users that walks you through estimating a monthly bill. See [Sample billing](/docs/introduction/billing-sample).
 - Find a typo in the Neon docs? Is there a section that's hard to understand? Notice that a certain topic is missing? The Neon docs are open-source, and contributions are welcome. See our [Documentation Contribution Guide](/docs/community/contribution-guide) for details.
-
-### From the Neon blog
-
-- Learn how to synchronize your PostgreSQL and Airbyte data in this community-contributed blog post by Jacob Prall, Senior Developer Advocate at [Airbyte](https://airbyte.com/): 
-    
-    [A Guide to Logical Replication and CDC in PostgreSQL with Airbyte](https://neon.tech/blog/a-guide-to-logical-replication-and-cdc-in-postgresql-with-airbyte)
 
 ### Fixes & improvements
 
