--- a/content/changelog/2024-01-19-console.md
+++ b/content/changelog/2024-01-19-console.md
@@ -1,35 +1,30 @@
 ---
-description: TBD
+description: Fixes & improvements, Neon API updates, and more
 ---
-
-
 
 ### Fixes & improvements
 
-- For Neon Pro Plan users, the **Usage** widget in the Neon Console now includes a metric for monitoring the number of projects. The Neon Pro Plan has a soft limit of 20 projects.
 - Added several new cards to the **Request** section of **Integrations** page in the Neon Console where you can express your interest and share your feedback about future integrations with Neon. Your input helps the Neon team design and prioritize integrations. To learn how to participate, see [Express interest in upcoming integrations](/docs/manage/integrations#express-interest-in-upcoming-integrations).
 - Added a dialog requiring user confirmation when removing all IP addresses from an IP Allow configuration.  
-- Neon no longer autosuspends compute instances with an active connection from a logical replication susbscriber.
+- To prevent connection errors at the subscriber and repeated compute restarts, Neon no longer autosuspends a compute instance that has an active connection from a logical replication susbscriber.
+- To allow a Postgres autovacuum operation to continue running, Neon no longer suspends a compute due to inactivity while an autovacuum operation is in progress.
 - Fixed an issue in Neon Console confirmation dialogs that caused an "Unknown error".
 - Fixed an issue preventing the **Connection Details** widget on the Neon Console from displaying code snippets when accessing the Neon Console from a mobile device browser.
 - The **Community** link in the Neon Console sidebar is now directed to the [Neon Discord](https://discord.com/invite/92vNTzKDGp) server instead of the [Neon Discourse forum](https://community.neon.tech/).
-
 - Fixed a UI text consistency issue on the **Role Created** modal that is displayed after creating a new role in the Neon Console.
-- Added a drop-down menu to the breadcrumb navigation at the top of the Neon Console, providing another option for navigating your Neon project.
-
 
 ### Neon API updates
 
 - Added API methods for Neon's [project sharing](/docs/guides/project-sharing-guide) feature. The new methods allow you to:
-    - List users that a project is shared with. See [Return project permissions](tbd).
-    - Share a project with a specified user. See [Grant project permissions](tbd).
-    - Revoke project access from a user you shared a project with. See [Revoke project permissions](tbd).
-- Neon API methods such as [Get projects] and [Get branches] that return the branch or project creation source in the response body now return `"creation_source": "vercel"` for projects and branches created by the [Neon Vercel Integration](https://vercel.com/integrations/neon).
+    - List users that a project is shared with. See [Return project permissions](https://api-docs.neon.tech/reference/listprojectpermissions).
+    - Share a project with a specified user. See [Grant project permissions](https://api-docs.neon.tech/reference/grantpermissiontoproject).
+    - Revoke project access from a user you shared a project with. See [Revoke project permissions](https://api-docs.neon.tech/reference/revokepermissionfromproject).
+- Neon API methods such as [Get a list of projects](https://api-docs.neon.tech/reference/listprojects) and [Get a list of branches](https://api-docs.neon.tech/reference/listprojectbranches) that return the branch or project creation source in the response body now return `"creation_source": "vercel"` for projects and branches created by the [Neon Vercel Integration](https://vercel.com/integrations/neon).
 - The `ips` field in the `allowed_ips` object in the [Create project](https://api-docs.neon.tech/reference/createproject) and [Update project](https://api-docs.neon.tech/reference/updateproject) APIs was changed from required to optional. Otherwise, sending IP Allow requests from the [interactive Neon API reference](https://api-docs.neon.tech/reference/getting-started-with-neon-api) without specifying IP addresses was not permitted.
 
 ### Neon CLI updates
 
-TBD
+The [Neon CLI](https://neon.tech/docs/reference/neon-cli) now includes an `ip-allow` command, which supports `list`, `add`, `remove`, and `reset` actions on the IP allowlist for your Neon project. For details, see [Neon CLI commands — ip-allow](https://neon.tech/docs/reference/ip-allow). To install the Neon CLI or update your installation to the latest version, see [Neon CLI — Install and connect](https://neon.tech/docs/reference/cli-install).
 
 ### What's new in docs?
 
@@ -40,7 +35,7 @@ We have a couple of new guides for you to checkout this week:
 
 ### From the Neon Blog
 
-In case you missed them, be sure to check out our latest posts.
+In case you missed them, be sure to check out our latest posts:
 
 - [Moving scale-to-zero workloads from Aurora Serverless V1 to Neon](https://neon.tech/blog/aurora-serverless-v1-to-neon)
 - [How to build AI-powered apps using Postgres and DronaHQ](https://neon.tech/blog/how-to-build-ai-powered-apps-using-postgres-and-dronahq)
